src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dwP0.25-dhF500-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: P0.25\ndefault window height: F500\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 312 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 312 × 500, bounds: 1272 × 712, states: []
size: 312 × 500, bounds: 1272 × 712, states: [Activated]
